# tdrum

./: .gitignore  .hgignore  Cargo.toml  Fader.cpp  Fader.hpp  Instrument.cpp  Instrument.hpp  Makefile  MidiMessage.cpp  MidiMessage.hpp  Notify.cpp  Notify.hpp  PlayingSample.cpp  PlayingSample.hpp  Sample.cpp  Sample.hpp  TDrum.cpp  TDrum.hpp  midiout  midiout.cpp  midiout.i  tdrum  tdrum.glade  tdrum.i  tdrumapp.py
.cargo/: config
src/: fader.rs  instrument.rs  lib.rs  processor.rs  samples.rs
ui/: __init__.py  bus.py  core.py  fader.py  instrument.py  signalproxy.py  ui.py  utils.py
