[package]
name = "tdrum"
version = "0.1.0"
authors = ["Erik Ytterberg <erik.ytterberg@learningwell.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tdrum"
crate-type = ["cdylib"]

[dependencies]
sndfile-sys = "0.2.0"
jack = "0.6"
crossbeam-channel = "0.4"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]